--- a/app/src/main/res/layout/fragment_enter_customers_information.xml
+++ b/app/src/main/res/layout/fragment_enter_customers_information.xml
@@ -7,9 +7,121 @@
         style="@style/matchParent"
         tools:context="haiphat.com.bds.nghetuvan.view.profile.SettingActivity">
 
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Màn hình nhập thông tin khách hàng"/>
+        <android.support.design.widget.TextInputLayout
+            android:id="@+id/tilFullName"
+            style="@style/withWrap"
+            android:theme="@style/textInputLayout"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent">
+
+            <android.support.design.widget.TextInputEditText
+                android:id="@+id/tetFullName"
+                style="@style/matchWrap"
+                android:gravity="center"
+                android:hint="Nhập họ và tên"
+                android:inputType="text"
+                android:textColor="@color/colorWhite"
+                app:validateRequiredErrorMessage="@{@string/text_validate_require_field_email}"
+                app:validateEmailErrorMessage="@{@string/text_validate_email_invalid}"
+                />
+        </android.support.design.widget.TextInputLayout>
+
+        <android.support.design.widget.TextInputLayout
+            android:id="@+id/tilAddress"
+            style="@style/withWrap"
+            android:theme="@style/textInputLayout"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/tilFullName">
+
+            <android.support.design.widget.TextInputEditText
+                android:id="@+id/tetAddress"
+                style="@style/matchWrap"
+                android:gravity="center"
+                android:hint="Nhập địa chỉ"
+                android:inputType="text"
+                android:textColor="@color/colorWhite"
+                app:validateRequiredErrorMessage="@{@string/text_validate_require_field_email}"
+                app:validateEmailErrorMessage="@{@string/text_validate_email_invalid}"
+                />
+        </android.support.design.widget.TextInputLayout>
+        <android.support.design.widget.TextInputLayout
+            android:id="@+id/tilCMTND"
+            style="@style/withWrap"
+            android:theme="@style/textInputLayout"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/tilAddress">
+
+            <android.support.design.widget.TextInputEditText
+                android:id="@+id/tetCMTND"
+                style="@style/matchWrap"
+                android:gravity="center"
+                android:hint="Nhập số chứng minh thư"
+                android:inputType="number"
+                android:textColor="@color/colorWhite"
+                app:validateRequiredErrorMessage="@{@string/text_validate_require_field_email}"
+                app:validateEmailErrorMessage="@{@string/text_validate_email_invalid}"
+                />
+        </android.support.design.widget.TextInputLayout>
+
+        <android.support.design.widget.TextInputLayout
+            android:id="@+id/tilPhone"
+            style="@style/withWrap"
+            android:theme="@style/textInputLayout"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/tilCMTND">
+
+            <android.support.design.widget.TextInputEditText
+                android:id="@+id/tetPhone"
+                style="@style/matchWrap"
+                android:gravity="center"
+                android:hint="Nhập số điện thoại"
+                android:inputType="phone"
+                android:textColor="@color/colorWhite"
+                app:validateRequiredErrorMessage="@{@string/text_validate_require_field_email}"
+                app:validateEmailErrorMessage="@{@string/text_validate_email_invalid}"
+                />
+        </android.support.design.widget.TextInputLayout>
+        <android.support.design.widget.TextInputLayout
+            android:id="@+id/tilEmail"
+            style="@style/withWrap"
+            android:theme="@style/textInputLayout"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/tilPhone">
+
+            <android.support.design.widget.TextInputEditText
+                android:id="@+id/tetEmail"
+                style="@style/matchWrap"
+                android:gravity="center"
+                android:hint="Nhập Email"
+                android:inputType="textEmailAddress"
+                android:textColor="@color/colorWhite"
+                app:validateRequiredErrorMessage="@{@string/text_validate_require_field_email}"
+                app:validateEmailErrorMessage="@{@string/text_validate_email_invalid}"
+                />
+        </android.support.design.widget.TextInputLayout>
+
+        <android.support.design.widget.TextInputLayout
+            android:id="@+id/tilPrice"
+            style="@style/withWrap"
+            android:theme="@style/textInputLayout"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/tilEmail">
+
+            <android.support.design.widget.TextInputEditText
+                android:id="@+id/tetPrice"
+                style="@style/matchWrap"
+                android:gravity="center"
+                android:hint="Nhập Giá tiền"
+                android:inputType="number"
+                android:textColor="@color/colorWhite"
+                app:validateRequiredErrorMessage="@{@string/text_validate_require_field_email}"
+                app:validateEmailErrorMessage="@{@string/text_validate_email_invalid}"
+                />
+        </android.support.design.widget.TextInputLayout>
     </android.support.constraint.ConstraintLayout>
 </layout>
