--- a/app/src/main/res/layout/fragment_online_sales.xml
+++ b/app/src/main/res/layout/fragment_online_sales.xml
@@ -85,6 +85,7 @@
         <LinearLayout
             android:layout_width="0dp"
             android:layout_height="0dp"
+            android:layout_marginTop="10dp"
             android:gravity="center_horizontal"
             android:orientation="vertical"
             app:layout_constraintBottom_toBottomOf="parent"
