--- a/app/src/main/res/layout/fragment_online_sales.xml
+++ b/app/src/main/res/layout/fragment_online_sales.xml
@@ -8,62 +8,60 @@
         android:layout_height="match_parent"
         android:layout_marginTop="60dp">
 
-        <haiphat.com.bds.nghetuvan.utils.RippleView
-            android:id="@+id/rippleProject"
+        <LinearLayout
             style="@style/withWrap"
-            android:layout_marginRight="5dp"
-            app:layout_constraintBottom_toBottomOf="@+id/rippleBuilding"
-            app:layout_constraintHorizontal_weight="1"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toLeftOf="@+id/rippleBuilding"
-            app:layout_constraintTop_toTopOf="@+id/rippleBuilding">
-
-            <TextView
-                android:id="@+id/tvProject"
-                style="@style/withWrap"
-                android:gravity="center"
-                android:hint="Tên dự án"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toStartOf="@+id/imageView2"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
-
-            <ImageView
-                android:id="@+id/imageView2"
-                style="@style/wrapContent"
-                android:src="@drawable/ic_dow"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
-        </haiphat.com.bds.nghetuvan.utils.RippleView>
-
-        <haiphat.com.bds.nghetuvan.utils.RippleView
-            android:id="@+id/rippleBuilding"
-            style="@style/withWrap"
-            android:layout_marginLeft="5dp"
-            android:layout_marginRight="8dp"
+            android:orientation="horizontal"
             app:layout_constraintBottom_toBottomOf="@+id/rippleSearch"
             app:layout_constraintEnd_toStartOf="@+id/rippleSearch"
-            app:layout_constraintHorizontal_weight="1"
-            app:layout_constraintLeft_toRightOf="@+id/rippleProject"
+            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="@+id/rippleSearch">
 
-            <TextView
-                android:id="@+id/tvBuilding"
-                style="@style/withWrap"
-                android:gravity="center"
-                android:text="Tòa nhà"
-                app:layout_constraintEnd_toStartOf="@+id/imageView3"
-                app:layout_constraintStart_toStartOf="parent" />
-
-            <ImageView
-                android:id="@+id/imageView3"
+            <haiphat.com.bds.nghetuvan.utils.RippleView
+                android:id="@+id/rippleProject"
                 style="@style/wrapContent"
-                android:src="@drawable/ic_dow"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
-        </haiphat.com.bds.nghetuvan.utils.RippleView>
+                android:layout_weight="1">
+
+                <TextView
+                    android:id="@+id/tvProject"
+                    style="@style/withWrap"
+                    android:gravity="center"
+                    android:hint="Tên dự án"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toStartOf="@+id/imageView2"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
+
+                <ImageView
+                    android:id="@+id/imageView2"
+                    style="@style/wrapContent"
+                    android:src="@drawable/ic_dow"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
+            </haiphat.com.bds.nghetuvan.utils.RippleView>
+
+            <haiphat.com.bds.nghetuvan.utils.RippleView
+                android:id="@+id/rippleBuilding"
+                style="@style/wrapContent"
+                android:layout_weight="1">
+
+                <TextView
+                    android:id="@+id/tvBuilding"
+                    style="@style/withWrap"
+                    android:gravity="center"
+                    android:text="Tòa nhà"
+                    app:layout_constraintEnd_toStartOf="@+id/imageView3"
+                    app:layout_constraintStart_toStartOf="parent" />
+
+                <ImageView
+                    android:id="@+id/imageView3"
+                    style="@style/wrapContent"
+                    android:src="@drawable/ic_dow"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
+            </haiphat.com.bds.nghetuvan.utils.RippleView>
+        </LinearLayout>
 
         <haiphat.com.bds.nghetuvan.utils.RippleView
             android:id="@+id/rippleSearch"
@@ -71,16 +69,6 @@
             android:layout_height="30dp"
             android:background="@drawable/ic_search_action_bar"
             app:layout_constraintEnd_toEndOf="parent" />
-
-        <!--<com.evrencoskun.tableview.TableView-->
-        <!--android:id="@+id/content_container"-->
-        <!--android:layout_width="0dp"-->
-        <!--android:layout_height="0dp"-->
-        <!--android:layout_marginTop="8dp"-->
-        <!--app:layout_constraintBottom_toBottomOf="parent"-->
-        <!--app:layout_constraintEnd_toEndOf="parent"-->
-        <!--app:layout_constraintStart_toStartOf="parent"-->
-        <!--app:layout_constraintTop_toBottomOf="@+id/rippleProject" />-->
 
         <LinearLayout
             android:layout_width="0dp"
@@ -91,12 +79,12 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/rippleProject">
+            app:layout_constraintTop_toBottomOf="@+id/rippleSearch">
 
-                <TableLayout
-                    android:id="@+id/table_header"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content" />
+            <TableLayout
+                android:id="@+id/table_header"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
 
             <ScrollView
                 android:layout_width="fill_parent"
