--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -4,54 +4,20 @@
 
     <android.support.constraint.ConstraintLayout
         style="@style/matchParent"
-        android:background="@drawable/ic_background_auth">
+        android:background="@color/colorWhite">
 
-        <View
-            style="@style/matchParent"
-            android:alpha="0.5"
-            android:background="#6069a5"
+        <ImageView
+            style="@style/wrapContent"
+            android:src="@drawable/ic_logo_splash"
+            app:layout_constraintBottom_toTopOf="@+id/imageView"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
-        <android.support.constraint.ConstraintLayout
-            style="@style/matchWrap"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintTop_toTopOf="parent">
-
-            <include
-                android:id="@+id/logo"
-                layout="@layout/logo_view"
-                android:layout_width="150dp"
-                android:layout_height="150dp"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent" />
-
-            <TextView
-                android:id="@+id/tvTitle"
-                style="@style/wrapContent"
-                android:layout_marginTop="24dp"
-                android:text="Hệ thống giải pháp bất động sản"
-                android:textAllCaps="true"
-                android:textColor="@color/colorWhite"
-                android:textSize="16sp"
-                android:textStyle="bold"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/logo" />
-
-            <TextView
-                android:id="@+id/tvName"
-                style="@style/wrapContent"
-                android:layout_marginTop="5dp"
-                android:text="Số 1 việt nam"
-                android:textAllCaps="true"
-                android:textColor="@color/colorWhite"
-                android:textSize="35sp"
-                android:textStyle="bold"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/tvTitle" />
-        </android.support.constraint.ConstraintLayout>
+        <ImageView
+            android:id="@+id/imageView"
+            style="@style/wrapContent"
+            android:src="@drawable/ic_background_splash"
+            app:layout_constraintBottom_toBottomOf="parent" />
     </android.support.constraint.ConstraintLayout>
 </layout>
