--- a/app/src/main/res/layout/activity_forgot_password.xml
+++ b/app/src/main/res/layout/activity_forgot_password.xml
@@ -11,7 +11,7 @@
 
     <android.support.constraint.ConstraintLayout
         style="@style/matchParent"
-        android:background="@drawable/ic_background_auth">
+        android:background="@color/colorWhite">
 
         <View
             style="@style/matchParent"
@@ -19,15 +19,6 @@
             android:background="#6069a5" />
 
 
-        <include
-            android:id="@+id/logo"
-            layout="@layout/logo_view"
-            android:layout_width="150dp"
-            android:layout_height="150dp"
-            android:layout_marginTop="25dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
             android:id="@+id/tvTitle"
