--- a/app/src/main/res/layout/activity_update_information.xml
+++ b/app/src/main/res/layout/activity_update_information.xml
@@ -10,7 +10,7 @@
 
     <android.support.constraint.ConstraintLayout
         style="@style/matchParent"
-        android:background="@drawable/ic_background_auth">
+        android:background="@color/colorWhite">
 
         <View
             style="@style/matchParent"
