--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -100,4 +100,12 @@
         <item name="android:layout_height">60dp</item>
         <item name="android:layout_marginLeft">10dp</item>
     </style>
+
+    <style name="logInNow">
+        <item name="android:layout_width">50dp</item>
+        <item name="android:layout_height">75dp</item>
+        <item name="android:layout_weight">1</item>
+    </style>
+
+
 </resources>
